2019-12-03 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Utilize geda_strdup macro to shorten line lengths.

2019-11-30 Wiley E. Hill <wileyhill@gmail.com>

    * po/en_GB.po: Update Great Britain.

    * po/es.po: Update Spanish translations.

    * po/fa.po: Update Persian translations.

    * po/fr.po: Update French translations.

    * po/gl.po: Update Galician translations.

    * po/hu.po: Update Hungarian translations.

    * po/it.po: Update Italian translations.

    * po/ja.po: Update Japanese translations

    * po/ml.po: Updated Malayalam translations.

2019-11-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_toplevel.c: Revise s_toplevel_add_new_attrib to set sheet_head
      CHANGED member.

    * src/x_dialog.c: Revise x_dialog_new_attrib to set focus to the entry.

2019-11-23 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.

    * po/ar.po: Update Arabic translations.

    * po/bg.po: Update Bulgarian translations.

    * po/bs.po: Update Bosnian translations

    * po/ca.po: Update Catalan translations.

    * po/da.po: Update Danish translations.

    * po/de.po: Update German translations.

    * po/el.po: Update Greek translations.

2019-11-21 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Refomat documentation.

2019-11-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: clean up declarations and add ancillary
      PangoLanguage.

    * src/x_toolbars.c: Rename callback functions without capitalization.

2019-11-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Refomat documentation, add ancillary GdkGC in
      gtk_sheet_flash so as not to call gtk_widget_get_style four times.

2019-11-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Remove trival debug output from function
      s_string_list_delete_item, add function documentation. Sort the
      pin attributes in s_string_list_sort_master_pin_attrib_list.
